Fix text-align

--- a/assets/main.css
+++ b/assets/main.css
@@ -685,7 +685,7 @@ body.slim #btnSettings {
 .effect-marquee {
   overflow: hidden;
   position: absolute;
-  text-align: middle;
+  text-align: center;
   width: 100%;
   height: 1.3em;
   -moz-transform: translateX(100%);
@@ -714,7 +714,7 @@ body.slim #btnSettings {
 .effect-scroll {
   overflow: hidden;
   position: absolute;
-  text-align: middle;
+  text-align: center;
   width: 100%;
   height: 1.3em;
   -moz-transform: translateX(-100%);
@@ -743,7 +743,7 @@ body.slim #btnSettings {
 .effect-bounce {
   overflow: hidden;
   position: absolute;
-  text-align: middle;
+  text-align: center;
   width: 100%;
   height: 1.3em;
   -moz-transform: translateX(100%);
